fixed the responsiveness of about us section

--- a/index.html
+++ b/index.html
@@ -104,11 +104,10 @@
             <img src="./assets/fly_dino.png" id="fly-dino" alt="">
             <div></div>
             <img src="./assets/drop_egg.png" alt="" id="egg-drop">
-            <div class="my-5 row">
+            <div class="my-5 row justify-content-center">
                 <!--<div class="col-sm-12 col-md-12 col-lg-3 offset-lg-1 offset-md-4">-->
-                <div id="card1" class=" col-xs-11 col-sm-11 col-md-5 offset-md-2 offset-sm-1"
-                    style="width: 22rem; margin-top: 0rem;">
-                    <div class="card about-cards">
+                <div id="card1" class="d-flex col-11 col-xl-4 justify-content-center">
+                    <div class="card about-cards" id="about-us">
                         <div class="card-body">
                             <h5 class="card-title mt-3"><b>About Us</b></h5>
                             <p class="card-text mt-3">TechTogether New York is one of the few gender-focused
@@ -124,9 +123,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-11 col-sm-12 col-md-7 offest-md-2 offset-sm-1"
-                    style="width: 30rem; margin-top: 15rem;">
-                    <div class="card theme-cards">
+                <div class="d-flex col-11 col-xl-5 justify-content-center">
+                    <div class="card theme-cards" id="intro">
                         <div class="card-body">
                             <h5 class="card-title mt-3"><b>Frozen in Time: It’s n~ice~ 🧊 to be back!</b></h5>
                             <p class="card-text mt-3">We are excited to welcome you to TechTogether New York 2022,
