Added capital one

--- a/index.html
+++ b/index.html
@@ -410,15 +410,17 @@
                 </a>
             </div>
         </div>
-        <!-- <div class="row text-center" id="sponsor-2">
-           
+        <div class="row text-center" id="sponsor-2">
+
             <div class="column" id="sponsor-col">
-                <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:50%">
+                <a href="https://www.capitalone.com/">
+                    <img src="./sponsor logos/C1-logo.png" alt="sponsor" style="width:20%">
+                </a>
             </div>
-            <div class="column" id="sponsor-col">
+            <!-- <div class="column" id="sponsor-col">
                 <img src="./sponsor logos/Robinhood-logo-color.png" alt="sponsor" style="width:50%">
-            </div>
-        </div> -->
+            </div> -->
+        </div>
 
         <!--footer-->
 
